--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -4,19 +4,26 @@
     "radical": "Radical",
     "agenda": "Agenda",
     "search_events": "Search events...",
+    "search_by_name_address": "Search by name or address...",
     "favorite": "Favorite",
     "share_location": "Share Event",
     "directions": "Directions",
     "open_maps": "Open in Maps",
     "football": "Football",
+    "football_fields": "Football Fields",
     "basketball": "Basketball",
+    "basketball_courts": "Basketball Courts",
     "tennis": "Tennis",
     "table_tennis": "Table Tennis",
+    "table_tennis_areas": "Table Tennis Areas",
     "swimming": "Swimming",
-    "fitness_station": "Fitness Station",
+    "fitness_stations": "Fitness Stations",
     "skateboarding": "Skateboarding",
+    "skateboarding_parks": "Skateboarding Parks",
     "no_menu_available": "No menu available for {title}",
+    "no_characteristics_available": "No Characteristics Available",
     "find_your_activity": "Find your activity",
+    "find_location_exercise": "Find location for your exercise",
     "could_not_open_maps": "Could not open Google Maps",
     "date": "Date",
     "age_group": "Age Group",
@@ -41,5 +48,13 @@
     "asphalt": "Asphalt",
     "concrete": "Concrete",
     "plastic": "Plastic",
-    "wood": "Wood"
+    "wood": "Wood",
+    "lit": "Lit",
+    "not_lit": "Not Lit",
+    "location_permission_required": "Location permission is required to show nearby fields.",
+    "loading_error": "Something went wrong while loading data.",
+    "distance_unknown": "Distance Unknown",
+    "show_in_map": "Show in map",
+    "no_fields_found": "No fields found.\nTry changing filters or search.",
+    "unknown": "Unknown"
 }
