--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -1,22 +1,29 @@
 {
-    "grouped": "Gegroepeerd",
-    "not_so_grouped": "Minder gegroepeerd",
+    "grouped": "Groepen",
+    "not_so_grouped": "Minder Samen",
     "radical": "Radicaal",
     "agenda": "Agenda",
     "search_events": "Zoek activiteiten...",
+    "search_by_name_address": "Zoek op naam of adres...",
     "favorite": "Favoriet",
     "share_location": "Deel evenement",
     "directions": "Routebeschrijving",
     "open_maps": "Open in Google Maps",
     "football": "Voetbal",
+    "football_fields": "Voetbalvelden",
     "basketball": "Basketbal",
+    "basketball_courts": "Basketbalvelden",
     "tennis": "Tennis",
     "table_tennis": "Tafeltennis",
+    "table_tennis_areas": "Tafeltennisplekken",
     "swimming": "Zwemmen",
-    "fitness_station": "Fitness station",
+    "fitness_stations": "Fitnessstations",
     "skateboarding": "Skateboarden",
+    "skateboarding_parks": "Skateparken",
     "no_menu_available": "Geen menu beschikbaar voor {title}",
+    "no_characteristics_available": "Geen kenmerken beschikbaar",
     "find_your_activity": "Vind je activiteit",
+    "find_location_exercise": "Vind een locatie voor je oefening",
     "could_not_open_maps": "Kon Google Maps niet openen",
     "date": "Datum",
     "age_group": "Leeftijdsgroep",
@@ -27,7 +34,7 @@
     "check_for_fields": "Zoek naar velden",
     "look_for_fields": "Zoek naar velden in de buurt",
     "upcoming_events": "Aankomende Evenementen",
-    "join_sports_event": "Doe mee aan een sportevenement bij jou in de buurt",
+    "join_sports_event": "Sport mee in de buurt",
     "unnamed_field": "Onbenoemd veld",
     "unnamed_location": "Naamloze locatie",
     "user_shared_location": "Gebruiker heeft de locatie succesvol gedeeld",
@@ -41,5 +48,13 @@
     "asphalt": "Asfalt",
     "concrete": "Beton",
     "plastic": "Plastic",
-    "wood": "Hout"
+    "wood": "Hout",
+    "lit": "Verlicht",
+    "not_lit": "Niet verlicht",
+    "location_permission_required": "Locatie-toestemming is vereist om velden in de buurt te tonen.",
+    "loading_error": "Er is iets misgegaan bij het laden van de gegevens.",
+    "distance_unknown": "Afstand onbekend",
+    "show_in_map": "Toon op kaart",
+    "no_fields_found": "Geen velden gevonden.\nProbeer de filters of zoekopdracht aan te passen.",
+    "unknown": "Onbekend"
 }
