before_adding_more_sports

--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -1,60 +1,65 @@
 {
-    "grouped": "Groepen",
-    "not_so_grouped": "Minder Samen",
-    "radical": "Radicaal",
     "agenda": "Agenda",
-    "search_events": "Zoek activiteiten...",
-    "search_by_name_address": "Zoek op naam of adres...",
-    "favorite": "Favoriet",
-    "share_location": "Deel evenement",
-    "directions": "Routebeschrijving",
-    "open_maps": "Open in Google Maps",
-    "football": "Voetbal",
-    "football_fields": "Voetbalvelden",
-    "basketball": "Basketbal",
-    "basketball_courts": "Basketbalvelden",
-    "tennis": "Tennis",
-    "table_tennis": "Tafeltennis",
-    "table_tennis_areas": "Tafeltennisplekken",
-    "swimming": "Zwemmen",
-    "fitness_stations": "Fitnessstations",
-    "skateboarding": "Skateboarden",
-    "skateboarding_parks": "Skateparken",
-    "no_menu_available": "Geen menu beschikbaar voor {title}",
-    "no_characteristics_available": "Geen kenmerken beschikbaar",
-    "find_your_activity": "Vind je activiteit",
-    "find_location_exercise": "Vind een locatie voor je oefening",
-    "could_not_open_maps": "Kon Google Maps niet openen",
-    "date": "Datum",
     "age_group": "Leeftijdsgroep",
-    "recurring": "Terugkerend",
-    "one_time": "Eenmalig",
-    "to_enroll": "Inschrijven",
-    "hello": "Hallo Luis!",
-    "check_for_fields": "Zoek naar velden",
-    "look_for_fields": "Zoek naar velden in de buurt",
-    "upcoming_events": "Aankomende Evenementen",
-    "join_sports_event": "Sport mee in de buurt",
-    "unnamed_field": "Onbenoemd veld",
-    "unnamed_location": "Naamloze locatie",
-    "user_shared_location": "Gebruiker heeft de locatie succesvol gedeeld",
-    "user_dismissed_sharing": "Gebruiker heeft delen geannuleerd of gesloten",
-    "meet_me": "Ontmoet me bij",
-    "location_denied": "Locatietoestemming geweigerd. Schakel dit in via instellingen",
-    "failed_location": "Kan je locatie niet ophalen.",
-    "check_location": "Bekijk deze locatie:",
-    "grass": "Gras",
     "artificial_turf": "Kunstgras",
     "asphalt": "Asfalt",
+    "basketball": "Basketbal",
+    "basketball_courts": "Basketbalvelden",
+    "check_for_fields": "Zoek naar velden",
+    "check_location": "Bekijk deze locatie:",
     "concrete": "Beton",
-    "plastic": "Plastic",
-    "wood": "Hout",
-    "lit": "Verlicht",
-    "not_lit": "Niet verlicht",
-    "location_permission_required": "Locatie-toestemming is vereist om velden in de buurt te tonen.",
-    "loading_error": "Er is iets misgegaan bij het laden van de gegevens.",
+    "could_not_open_maps": "Kon Google Maps niet openen",
+    "date": "Datum",
+    "directions": "Routebeschrijving",
     "distance_unknown": "Afstand onbekend",
-    "show_in_map": "Toon op kaart",
+    "favorites": "Favorieten",
+    "failed_location": "Kan je locatie niet ophalen.",
+    "find_location_exercise": "Vind een locatie voor je oefening",
+    "find_your_activity": "Vind je activiteit",
+    "find_your_next_event_for_exercise": "Vind uw volgende sportevenement",
+    "fitness_stations": "Fitnessstations",
+    "football": "Voetbal",
+    "football_fields": "Voetbalvelden",
+    "grass": "Gras",
+    "grouped": "Groepen",
+    "hello": "Hallo Luis!",
+    "home": "Start",
+    "join_sports_event": "Sport mee in de buurt",
+    "lit": "Verlicht",
+    "loading_error": "Er is iets misgegaan bij het laden van de gegevens.",
+    "location_denied": "Locatietoestemming geweigerd. Schakel dit in via instellingen",
+    "location_permission_required": "Locatie-toestemming is vereist om velden in de buurt te tonen.",
+    "look_for_fields": "Zoek naar velden in de buurt",
+    "map": "Kaart",
+    "meet_me": "Ontmoet me bij",
+    "no_characteristics_available": "Geen kenmerken beschikbaar",
+    "no_events_found": "Geen evenementen gevonden",
     "no_fields_found": "Geen velden gevonden.\nProbeer de filters of zoekopdracht aan te passen.",
-    "unknown": "Onbekend"
+    "no_menu_available": "Geen menu beschikbaar voor {title}",
+    "not_lit": "Niet verlicht",
+    "not_so_grouped": "Minder Samen",
+    "one_time": "Eenmalig",
+    "open_maps": "Open in Google Maps",
+    "plastic": "Plastic",
+    "radical": "Radicaal",
+    "recurring": "Terugkerend",
+    "search_by_name_address": "Zoek op naam of adres...",
+    "search_events": "Zoek evenementen op naam of adres",
+    "share_location": "Deel evenement",
+    "show_in_map": "Toon op kaart",
+    "skateboarding": "Skateboarden",
+    "skateboarding_parks": "Skateparken",
+    "swimming": "Zwemmen",
+    "table_tennis": "Tafeltennis",
+    "table_tennis_areas": "Tafeltennisplekken",
+    "tennis": "Tennis",
+    "to_enroll": "Inschrijven",
+    "unknown": "Onbekend",
+    "unnamed_field": "Onbenoemd veld",
+    "unnamed_location": "Naamloze locatie",
+    "upcoming_events": "Aankomende Evenementen",
+    "user_dismissed_sharing": "Gebruiker heeft delen geannuleerd of gesloten",
+    "user_shared_location": "Gebruiker heeft de locatie succesvol gedeeld",
+    "wood": "Hout",
+    "you": "Jij"
 }
