--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,60 +1,65 @@
 {
-    "grouped": "Grouped",
-    "not_so_grouped": "Not so Grouped",
-    "radical": "Radical",
     "agenda": "Agenda",
-    "search_events": "Search events...",
-    "search_by_name_address": "Search by name or address...",
-    "favorite": "Favorite",
-    "share_location": "Share Event",
-    "directions": "Directions",
-    "open_maps": "Open in Maps",
-    "football": "Football",
-    "football_fields": "Football Fields",
-    "basketball": "Basketball",
-    "basketball_courts": "Basketball Courts",
-    "tennis": "Tennis",
-    "table_tennis": "Table Tennis",
-    "table_tennis_areas": "Table Tennis Areas",
-    "swimming": "Swimming",
-    "fitness_stations": "Fitness Stations",
-    "skateboarding": "Skateboarding",
-    "skateboarding_parks": "Skateboarding Parks",
-    "no_menu_available": "No menu available for {title}",
-    "no_characteristics_available": "No Characteristics Available",
-    "find_your_activity": "Find your activity",
-    "find_location_exercise": "Find location for your exercise",
-    "could_not_open_maps": "Could not open Google Maps",
-    "date": "Date",
     "age_group": "Age Group",
-    "recurring": "Recurring",
-    "one_time": "One-time",
-    "to_enroll": "To Enroll",
-    "hello": "Hello Luis!",
-    "check_for_fields": "Check for fields",
-    "look_for_fields": "Look for fields around you",
-    "upcoming_events": "Upcoming Events",
-    "join_sports_event": "Join a sports event near you",
-    "unnamed_field": "Unnamed Field",
-    "unnamed_location": "Unnamed Location",
-    "user_shared_location": "User successfully shared the location",
-    "user_dismissed_sharing": "User dismissed or canceled sharing",
-    "meet_me": "Meet me at",
-    "location_denied": "Location permission denied. Please enable it in settings.",
-    "failed_location": "Failed to get your location.",
-    "check_location": "Check out this location",
-    "grass": "Grass",
     "artificial_turf": "Artificial",
     "asphalt": "Asphalt",
+    "basketball": "Basketball",
+    "basketball_courts": "Basketball Courts",
+    "check_for_fields": "Check for fields",
+    "check_location": "Check out this location",
     "concrete": "Concrete",
-    "plastic": "Plastic",
-    "wood": "Wood",
-    "lit": "Lit",
-    "not_lit": "Not Lit",
-    "location_permission_required": "Location permission is required to show nearby fields.",
-    "loading_error": "Something went wrong while loading data.",
+    "could_not_open_maps": "Could not open Google Maps",
+    "date": "Date",
+    "directions": "Directions",
     "distance_unknown": "Distance Unknown",
-    "show_in_map": "Show in map",
+    "favorites": "Favorites",
+    "failed_location": "Failed to get your location.",
+    "find_location_exercise": "Find location for your exercise",
+    "find_your_activity": "Find your activity",
+    "find_your_next_event_for_exercise": "Find your next event for exercise",
+    "fitness_stations": "Fitness Stations",
+    "football": "Football",
+    "football_fields": "Football Fields",
+    "grass": "Grass",
+    "grouped": "Grouped",
+    "hello": "Hello Luis!",
+    "home": "Home",
+    "join_sports_event": "Join a sports event near you",
+    "lit": "Lit",
+    "loading_error": "Something went wrong while loading data.",
+    "location_denied": "Location permission denied. Please enable it in settings.",
+    "location_permission_required": "Location permission is required to show nearby fields.",
+    "look_for_fields": "Look for fields around you",
+    "map": "Map",
+    "meet_me": "Meet me at",
+    "no_characteristics_available": "No Characteristics Available",
     "no_fields_found": "No fields found.\nTry changing filters or search.",
-    "unknown": "Unknown"
+    "no_events_found": "No events found",
+    "no_menu_available": "No menu available for {title}",
+    "not_lit": "Not Lit",
+    "not_so_grouped": "Not so Grouped",
+    "one_time": "One-time",
+    "open_maps": "Open in Maps",
+    "plastic": "Plastic",
+    "radical": "Radical",
+    "recurring": "Recurring",
+    "search_by_name_address": "Search by name or address...",
+    "search_events": "Search events by name or address",
+    "share_location": "Share Event",
+    "show_in_map": "Show in map",
+    "skateboarding": "Skateboarding",
+    "skateboarding_parks": "Skateboarding Parks",
+    "swimming": "Swimming",
+    "table_tennis": "Table Tennis",
+    "table_tennis_areas": "Table Tennis Areas",
+    "tennis": "Tennis",
+    "to_enroll": "To Enroll",
+    "unknown": "Unknown",
+    "unnamed_field": "Unnamed Field",
+    "unnamed_location": "Unnamed Location",
+    "upcoming_events": "Upcoming Events",
+    "user_dismissed_sharing": "User dismissed or canceled sharing",
+    "user_shared_location": "User successfully shared the location",
+    "wood": "Wood",
+    "you": "You"
 }
