before_correcting_beachvolleyball

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,6 +5,7 @@
     "asphalt": "Asphalt",
     "basketball": "Basketball",
     "basketball_courts": "Basketball Courts",
+    "beachvolleyball": "Beach VolleyBall",
     "check_for_fields": "Check for fields",
     "check_location": "Check out this location",
     "concrete": "Concrete",
@@ -17,8 +18,8 @@
     "find_location_exercise": "Find location for your exercise",
     "find_your_activity": "Find your activity",
     "find_your_next_event_for_exercise": "Find your next event for exercise",
+    "fitness": "Fitness",
     "fitness_stations": "Fitness Stations",
-    "football": "Football",
     "football_fields": "Football Fields",
     "grass": "Grass",
     "grouped": "Grouped",
@@ -45,10 +46,11 @@
     "recurring": "Recurring",
     "search_by_name_address": "Search by name or address...",
     "search_events": "Search events by name or address",
-    "share_location": "Share Event",
+    "share_location": "Share Location",
     "show_in_map": "Show in map",
-    "skateboarding": "Skateboarding",
-    "skateboarding_parks": "Skateboarding Parks",
+    "skateboard": "Skateboard",
+    "skateboard_parks": "Skateboard Parks",
+    "soccer": "Football",
     "swimming": "Swimming",
     "table_tennis": "Table Tennis",
     "table_tennis_areas": "Table Tennis Areas",
