--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -5,8 +5,9 @@
     "asphalt": "Asfalt",
     "basketball": "Basketbal",
     "basketball_courts": "Basketbalvelden",
+    "beachvolleyball": "Beachvolleybal",
     "check_for_fields": "Zoek naar velden",
-    "check_location": "Bekijk deze locatie:",
+    "check_location": "Bekijk deze locatie",
     "concrete": "Beton",
     "could_not_open_maps": "Kon Google Maps niet openen",
     "date": "Datum",
@@ -16,9 +17,9 @@
     "failed_location": "Kan je locatie niet ophalen.",
     "find_location_exercise": "Vind een locatie voor je oefening",
     "find_your_activity": "Vind je activiteit",
-    "find_your_next_event_for_exercise": "Vind uw volgende sportevenement",
+    "find_your_next_event_for_exercise": "Vind je volgende sportevenement",
+    "fitness": "Fitness",
     "fitness_stations": "Fitnessstations",
-    "football": "Voetbal",
     "football_fields": "Voetbalvelden",
     "grass": "Gras",
     "grouped": "Groepen",
@@ -39,16 +40,17 @@
     "not_lit": "Niet verlicht",
     "not_so_grouped": "Minder Samen",
     "one_time": "Eenmalig",
-    "open_maps": "Open in Google Maps",
+    "open_maps": "Open in Maps",
     "plastic": "Plastic",
     "radical": "Radicaal",
     "recurring": "Terugkerend",
     "search_by_name_address": "Zoek op naam of adres...",
     "search_events": "Zoek evenementen op naam of adres",
-    "share_location": "Deel evenement",
+    "share_location": "Deel locatie",
     "show_in_map": "Toon op kaart",
-    "skateboarding": "Skateboarden",
-    "skateboarding_parks": "Skateparken",
+    "skateboard": "Skateboard",
+    "skateboard_parks": "Skateparken",
+    "soccer": "Voetbal",
     "swimming": "Zwemmen",
     "table_tennis": "Tafeltennis",
     "table_tennis_areas": "Tafeltennisplekken",
@@ -57,7 +59,7 @@
     "unknown": "Onbekend",
     "unnamed_field": "Onbenoemd veld",
     "unnamed_location": "Naamloze locatie",
-    "upcoming_events": "Aankomende Evenementen",
+    "upcoming_events": "Aankomende evenementen",
     "user_dismissed_sharing": "Gebruiker heeft delen geannuleerd of gesloten",
     "user_shared_location": "Gebruiker heeft de locatie succesvol gedeeld",
     "wood": "Hout",
