latest_working_version

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,6 +6,8 @@
     "basketball": "Basketball",
     "basketball_courts": "Basketball Courts",
     "beachvolleyball": "Beach VolleyBall",
+    "bmx": "Bmx",
+    "bmx_parks": "Bmx Parks",
     "check_for_fields": "Check for fields",
     "check_location": "Check out this location",
     "concrete": "Concrete",
