--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -6,6 +6,8 @@
     "basketball": "Basketbal",
     "basketball_courts": "Basketbalvelden",
     "beachvolleyball": "Beachvolleybal",
+    "bmx": "Bmx",
+    "bmx_parks": "Bmx-parken",
     "check_for_fields": "Zoek naar velden",
     "check_location": "Bekijk deze locatie",
     "concrete": "Beton",
