after_adding_more_sports

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -8,8 +8,10 @@
     "beachvolleyball": "Beach VolleyBall",
     "bmx": "Bmx",
     "bmx_parks": "Bmx Parks",
+    "canoeing": "Canoing",
     "check_for_fields": "Check for fields",
     "check_location": "Check out this location",
+    "climbing": "climbing",
     "concrete": "Concrete",
     "could_not_open_maps": "Could not open Google Maps",
     "date": "Date",
