--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -8,8 +8,10 @@
     "beachvolleyball": "Beachvolleybal",
     "bmx": "Bmx",
     "bmx_parks": "Bmx-parken",
+    "canoeing": "Kanoën",
     "check_for_fields": "Zoek naar velden",
     "check_location": "Bekijk deze locatie",
+    "climbing": "Klimmen",
     "concrete": "Beton",
     "could_not_open_maps": "Kon Google Maps niet openen",
     "date": "Datum",
