before_modularity_imrpovs

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -37,6 +37,8 @@
     "look_for_fields": "Look for fields around you",
     "map": "Map",
     "meet_me": "Meet me at",
+    "motocross": "Motocross",
+    "motocross_areas": "Motocross Areas",
     "no_characteristics_available": "No Characteristics Available",
     "no_fields_found": "No fields found.\nTry changing filters or search.",
     "no_events_found": "No events found",
