--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -37,6 +37,8 @@
     "look_for_fields": "Zoek naar velden in de buurt",
     "map": "Kaart",
     "meet_me": "Ontmoet me bij",
+    "motocross": "Motorcross",
+    "motocross_areas": "Motocross Gebieden",
     "no_characteristics_available": "Geen kenmerken beschikbaar",
     "no_events_found": "Geen evenementen gevonden",
     "no_fields_found": "Geen velden gevonden.\nProbeer de filters of zoekopdracht aan te passen.",
