after_tokens&theme

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -11,7 +11,7 @@
     "canoeing": "Canoing",
     "check_for_fields": "Check for fields",
     "check_location": "Check out this location",
-    "climbing": "climbing",
+    "climbing": "Climbing",
     "concrete": "Concrete",
     "could_not_open_maps": "Could not open Google Maps",
     "date": "Date",
@@ -29,6 +29,8 @@
     "grouped": "Grouped",
     "hello": "Hello Luis!",
     "home": "Home",
+    "individual": "Individual",
+    "intensive": "Intensive",
     "join_sports_event": "Join a sports event near you",
     "lit": "Lit",
     "loading_error": "Something went wrong while loading data.",
@@ -44,11 +46,9 @@
     "no_events_found": "No events found",
     "no_menu_available": "No menu available for {title}",
     "not_lit": "Not Lit",
-    "not_so_grouped": "Not so Grouped",
     "one_time": "One-time",
     "open_maps": "Open in Maps",
     "plastic": "Plastic",
-    "radical": "Radical",
     "recurring": "Recurring",
     "search_by_name_address": "Search by name or address...",
     "search_events": "Search events by name or address",
