--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -29,6 +29,8 @@
     "grouped": "Groepen",
     "hello": "Hallo Luis!",
     "home": "Start",
+    "individual": "Individueel",
+    "intensive": "Intensief",
     "join_sports_event": "Sport mee in de buurt",
     "lit": "Verlicht",
     "loading_error": "Er is iets misgegaan bij het laden van de gegevens.",
@@ -44,11 +46,9 @@
     "no_fields_found": "Geen velden gevonden.\nProbeer de filters of zoekopdracht aan te passen.",
     "no_menu_available": "Geen menu beschikbaar voor {title}",
     "not_lit": "Niet verlicht",
-    "not_so_grouped": "Minder Samen",
     "one_time": "Eenmalig",
     "open_maps": "Open in Maps",
     "plastic": "Plastic",
-    "radical": "Radicaal",
     "recurring": "Terugkerend",
     "search_by_name_address": "Zoek op naam of adres...",
     "search_events": "Zoek evenementen op naam of adres",
@@ -65,7 +65,7 @@
     "unknown": "Onbekend",
     "unnamed_field": "Onbenoemd veld",
     "unnamed_location": "Naamloze locatie",
-    "upcoming_events": "Aankomende evenementen",
+    "upcoming_events": "Aankomende Evenementen",
     "user_dismissed_sharing": "Gebruiker heeft delen geannuleerd of gesloten",
     "user_shared_location": "Gebruiker heeft de locatie succesvol gedeeld",
     "wood": "Hout",
