after_improving_home+activities

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -8,6 +8,7 @@
     "beachvolleyball": "Beach VolleyBall",
     "bmx": "Bmx",
     "bmx_parks": "Bmx Parks",
+    "calores_per_hour": "{0} kcal/hour",
     "canoeing": "Canoing",
     "check_for_fields": "Check for fields",
     "check_location": "Check out this location",
@@ -18,6 +19,7 @@
     "directions": "Directions",
     "distance_unknown": "Distance Unknown",
     "favorites": "Favorites",
+    "failed_events": "Failed to load events",
     "failed_location": "Failed to get your location.",
     "find_location_exercise": "Find location for your exercise",
     "find_your_activity": "Find your activity",
@@ -51,6 +53,7 @@
     "plastic": "Plastic",
     "recurring": "Recurring",
     "search_by_name_address": "Search by name or address...",
+    "see_all": "See All",
     "search_events": "Search events by name or address",
     "share_location": "Share Location",
     "show_in_map": "Show in map",
