--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -8,6 +8,7 @@
     "beachvolleyball": "Beachvolleybal",
     "bmx": "Bmx",
     "bmx_parks": "Bmx-parken",
+    "calores_per_hour": "{0} kcal/uur",
     "canoeing": "Kanoën",
     "check_for_fields": "Zoek naar velden",
     "check_location": "Bekijk deze locatie",
@@ -17,6 +18,7 @@
     "date": "Datum",
     "directions": "Routebeschrijving",
     "distance_unknown": "Afstand onbekend",
+    "failed_events": "Kan gebeurtenissen niet laden",
     "favorites": "Favorieten",
     "failed_location": "Kan je locatie niet ophalen.",
     "find_location_exercise": "Vind een locatie voor je oefening",
@@ -51,6 +53,7 @@
     "plastic": "Plastic",
     "recurring": "Terugkerend",
     "search_by_name_address": "Zoek op naam of adres...",
+    "see_all": "Zie Alles",
     "search_events": "Zoek evenementen op naam of adres",
     "share_location": "Deel locatie",
     "show_in_map": "Toon op kaart",
